2009-10-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-responsible-backend): Throw an error if not backend is
	found.  Remove the REGISTER argument. Move the code dealing with
	REGISTER ...
	(vc-get-backend-for-registration): ... here.  New function.
	(vc-deduce-fileset): Call vc-get-backend-for-registration instead
	of vc-responsible-backend, pass the file name instead of the
	directory name.

2009-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcomplete.el (pcomplete-common-suffix, pcomplete-table-subvert):
	New funs.
	(pcomplete-std-complete): Use them.  Obey pcomplete-termination-string.
	(pcomplete-comint-setup): Don't modify a global var via
	accidental side-effects.
	(pcomplete-shell-setup): Adjust call accordingly.
	(pcomplete-parse-comint-arguments): Use push.

2009-10-23  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/checkdoc.el (checkdoc-proper-noun-region-engine):
	Allow uncapitalized info node names (Bug#3921).

	* mail/emacsbug.el (report-emacs-bug): Tweak the sentence pointing
	to the DEBUG file (Bug#3781).

2009-10-23  Jari Aalto  <jari.aalto@cante.net>

	* textmodes/ispell.el (ispell-dictionary-base-alist): Add finnish
	dictionary entry (Bug#4579).

2009-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (top): Remove `tramp-rfn-eshadow-update-overlay'
	from `rfn-eshadow-update-overlay-hook' when unloading.
	(tramp-methods): Add `tramp-copy-keep-tmpfile' for "rsync" and
	"rsyncc".  Adjust doc string.
	(tramp-temp-buffer-file-name) New buffer-local defvar.
	(tramp-handle-insert-file-contents, tramp-handle-write-region):
	Keep temporary file when indicated by method ("rsync" and
	"rsyncc").
	(tramp-handle-write-region): Handle APPEND.
	(tramp-delete-temp-file-function): New defun.  Added to
	`kill-buffer-hook'.

2009-10-23  Juanma Barranquero  <lekktu@gmail.com>

	* menu-bar.el (cua-enable-cua-keys): Declare for the byte-compiler.

2009-10-23  Dan Nicolaescu  <dann@ics.uci.edu>
