@@ -1,3 +1,9 @@
+2009-10-24  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* minibuffer.el (completion--embedded-envvar-table): Fix last change.
+	Ignore `pred' now that we receive one.
+	Handle test-completion specially.
+
 2009-10-23  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* vc.el (vc-responsible-backend): Throw an error if not backend is
